--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ body{
     color: #3b373f;
 }
 
+.box__link--active{
+    color: red;
+}
+
 .box__link:hover{
     color: #252029;
     text-decoration: underline;
